added dashboard, session and auth

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -30,9 +30,7 @@
                 "input": "public"
               }
             ],
-            "styles": [
-              "src/styles.scss"
-            ]
+            "styles": ["src/styles.scss"]
           },
           "configurations": {
             "production": {
@@ -67,6 +65,9 @@
             "development": {
               "buildTarget": "Fullstack-Webshop:build:development"
             }
+          },
+          "options": {
+            "proxyConfig": "proxy.conf.json"
           },
           "defaultConfiguration": "development"
         },
